# octo-foc

./: .gitignore  .gitmodules  CMakeLists.txt  foc_config.h  version.h  version.h.in
foc_port/: foc_fs_port.c  foc_fs_port.h
sensor/: CMakeLists.txt
sensor/MT6835/: .gitignore  CMakeLists.txt  CMakeLists_esp_idf.txt  mt6835.c  mt6835.h  version.h
sensor/MT6835/src/: mt6835.h
src/fdcan_driver/: fdcan_driver.c  fdcan_driver.h
src/foc/: foc.c  foc.h
src/pid/: pid.c  pid.h
src/qmath/: qtrigf.c  qtrigf.h  util_math.c  util_math.h
src/sensor/: CMakeLists.txt
src/sensor/AS5600/: as5600.c  as5600.h
src/sensor/MT6835/: mt6835.c  mt6835.h
src/soft_control/: soft_control.c  soft_control.h
user/port/: CMakeLists.txt
user/port/encoder/: as5600_esp32_idf_i2c_port.c  as5600_esp32_idf_i2c_port.h  as5600_stm32_i2c_port.c  as5600_stm32_i2c_port.h  mt6835_stm32_spi_port.c  mt6835_stm32_spi_port.h
